kubernetes/k8-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reciter-scopus
  namespace: reciter
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /scopus/ping
    alb.ingress.kubernetes.io/success-codes: 200-302
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
  labels:
    app: reciter-scopus
    environment: dev
    tier: backend
    owner: szd2013
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: reciter-scopus
    tier: backend
  type: NodePort
