kubernetes/k8-alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reciter-ing
  namespace: reciter
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:xxxxxxxxxxxx:certificate/xxxxxxxxxxxxxxxxxxxxx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.swagger-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path": "/#{path}/swagger-ui.html", "Query": "#{query}", "StatusCode": "HTTP_301"}}'
  labels:
    environment: dev
    owner: szd2013
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /reciter
            backend:
              serviceName: swagger-redirect
              servicePort: use-annotation
          - path: /pubmed
            backend:
              serviceName: swagger-redirect
              servicePort: use-annotation
          - path: /scopus
            backend:
              serviceName: swagger-redirect
              servicePort: use-annotation
          - path: /pubmed*
            backend:
              serviceName: reciter-pubmed
              servicePort: 80
          - path: /scopus*
            backend:
              serviceName: reciter-scopus
              servicePort: 80
          - path: /reciter*
            backend:
              serviceName: reciter
              servicePort: 80
          - path: /*
            backend:
              serviceName: reciter-pm
              servicePort: 80
